[package]
name = "interop"
version = "0.1.0"
edition = "2021"

[dependencies.pyo3]
version = "0.22.2"
features = ["auto-initialize"]

[dependencies]
steel-core = { git="https://github.com/mattwparas/steel.git", branch = "master" }
steel-repl = { git="https://github.com/mattwparas/steel.git", branch = "master" }
